--- a/cinematica1/main.ipynb
+++ b/cinematica1/main.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,8 +188,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Variáveis que serão baseadas para descrever as propriedades do movimento da particola."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ang = 70 # Angulo de lançamento\n",
+    "vi  = 13 # Velocidade inicial\n",
+    "\n",
+    "init = 0.0\n",
+    "end  = 2.8301"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tabela com alguns valores intermediários do movimento."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Time       X       Y      Vx      Vy  VTotal     Ang\n",
+      "----------------------------------------------------------\n",
+      "  0.000   0.000   0.000   4.446  12.216  13.000  70.000\n",
+      "  0.314   1.398   2.386   4.446   9.131  10.156  64.037\n",
+      "  0.629   2.796   1.863   4.446   6.046   7.505  53.671\n",
+      "  0.943   4.194  -1.571   4.446   2.962   5.342  33.667\n",
+      "  1.258   5.593  -7.915   4.446  -0.123   4.448  -1.588\n",
+      "  1.572   6.991 -17.169   4.446  -3.208   5.483 -35.811\n",
+      "  1.887   8.389 -29.334   4.446  -6.293   7.705 -54.757\n",
+      "  2.201   9.787 -44.408   4.446  -9.378  10.378 -64.633\n",
+      "  2.516  11.185 -62.392   4.446 -12.462  13.232 -70.365\n",
+      "  2.830  12.583 -83.287   4.446 -15.547  16.171 -74.040\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"   Time       X       Y      Vx      Vy  VTotal     Ang\")\n",
+    "print(\"----------------------------------------------------------\")\n",
+    "for i in np.linspace(init, end,dtype=float, num=10):\n",
+    "    vx = Vx(ang=ang,vi=vi)\n",
+    "    vy = Vy(ang=ang,vi=vi,t=i)\n",
+    "    vt = Vt(vx=vx,vy=vy)\n",
+    "\n",
+    "    px = Px(vx=vx,t=i)\n",
+    "    py = Py(vy=vy,t=i)\n",
+    "    ag = Ang(vx=vx, vy=vy)\n",
+    "\n",
+    "    print(\"{t:7.3f} {x:7.3f} {y:7.3f} {vx:7.3f} {vy:7.3f} {vt:7.3f} {a:7.3f}\".format(\n",
+    "        t = i,\n",
+    "        x = px,\n",
+    "        y = py,\n",
+    "        vx = vx,\n",
+    "        vy = vy,\n",
+    "        vt = vt,\n",
+    "        a = np.degrees(ag)\n",
+    "    ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -204,11 +278,6 @@
     }
    ],
    "source": [
-    "ang = 70\n",
-    "vi  = 13\n",
-    "init = 0.0\n",
-    "end  = 2.8301\n",
-    "\n",
     "x = np.array([0])\n",
     "y = np.array([0])\n",
     "\n",
